--- a/pages/subpages/mall/hotel/index.wxml
+++ b/pages/subpages/mall/hotel/index.wxml
@@ -36,7 +36,7 @@
 
 <van-calendar 
   default-date="{{[checkInDate, checkOutDate]}}"
-  show="{{calendarPopupVisibel}}" 
+  show="{{calendarPopupVisible}}" 
   formatter="{{ formatter }}" 
   bind:close="hideCalendarPopup" 
   bind:confirm="setCalendar" 
