--- a/pages/subpages/common/search/index.wxml
+++ b/pages/subpages/common/search/index.wxml
@@ -4,7 +4,7 @@
 <view class="header">
   <view class="search-bar">
     <view class="search-content row">
-      <view class="calendar-bar" wx:if="{{isSearching && curMenuIdx === 5}}" bindtap="showCalendarPopup">
+      <view class="calendar-bar" wx:if="{{searching && curMenuIdx === 5}}" bindtap="showCalendarPopup">
         <view class="calendar-item">
           <text style="color: #999;">住</text>
           <text>{{TIME.transform(checkInDate, 'MM-DD')}}</text>
@@ -33,7 +33,7 @@
 
   <scroll-view 
     class="menu-tab-list" 
-    wx:if="{{isSearching}}"
+    wx:if="{{searching}}"
     scroll-left="{{tabScroll}}"
     scroll-x
     enable-flex
@@ -51,7 +51,7 @@
   </scroll-view>
 </view>
 
-<view class="history-keywords-wrap" wx:if="{{!isSearching}}">
+<view class="history-keywords-wrap" wx:if="{{!searching}}">
   <view class="title row between">
     <view>历史搜索</view>
     <image class="delete-icon" wx:if="{{historyKeywords.length}}" src="https://img.ubo.vip/mp/selection/search/del-history.png" bindtap="clearHistoryKeywords" />
@@ -68,7 +68,7 @@
   <empty-illus wx:if="{{!historyKeywords.length}}" desc="暂无历史搜索" height="300rpx" />
 </view>
 
-<view class="hot-keywords-wrap" wx:if="{{!isSearching && hotKeywords.length}}">
+<view class="hot-keywords-wrap" wx:if="{{!searching && hotKeywords.length}}">
   <view class="title">热门搜索</view>
   <view class="keywords-list">
     <view 
@@ -81,7 +81,7 @@
   </view>
 </view>
 
-<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 0}}">
+<view class="list-wrap" wx:if="{{searching && curMenuIdx === 0}}">
   <view class="result-overview-wrap" wx:if="{{scenicList.length}}">
     <view class="result-title row">
       <view>景点</view>
@@ -125,62 +125,106 @@
   <fall-flow 
     wx:if="{{mediaList.length}}" 
     list="{{mediaList}}" 
+    loading="{{mediaLoading}}"
+    finished="{{mediaFinished}}"
     generic:item="media-item" 
   />
-  <view class="no-more-tips" wx:if="{{mediaFinished && mediaList.length}}">～没有更多啦～</view>
 </view>
 
-<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 1}}">
-  <fall-flow wx:if="{{videoList.length}}" list="{{videoList}}" generic:item="video-item" />
+<view class="list-wrap" wx:if="{{searching && curMenuIdx === 1}}">
+  <fall-flow 
+    wx:if="{{videoList.length}}" 
+    list="{{videoList}}" 
+    loading="{{videoLoading}}"
+    finished="{{videoFinished}}"
+    generic:item="video-item" 
+  />
   <empty-illus wx:if="{{videoFinished && !videoList.length}}" desc="没有找到相关视频游记" />
-  <view class="no-more-tips" wx:if="{{videoFinished && videoList.length}}">～没有更多啦～</view>
 </view>
 
-<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 2}}">
-  <fall-flow wx:if="{{noteList.length}}" list="{{noteList}}" generic:item="note-item" />
+<view class="list-wrap" wx:if="{{searching && curMenuIdx === 2}}">
+  <fall-flow 
+    wx:if="{{noteList.length}}" 
+    list="{{noteList}}" 
+    loading="{{noteLoading}}"
+    finished="{{noteFinished}}"
+    generic:item="note-item" 
+  />
   <empty-illus wx:if="{{noteFinished && !noteList.length}}" desc="没有找到相关图文游记" />
-  <view class="no-more-tips" wx:if="{{noteFinished && noteList.length}}">～没有更多啦～</view>
 </view>
 
-<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 3}}">
-  <fall-flow wx:if="{{liveList.length}}" list="{{liveList}}" generic:item="live-item" />
+<view class="list-wrap" wx:if="{{searching && curMenuIdx === 3}}">
+  <fall-flow 
+    wx:if="{{liveList.length}}" 
+    list="{{liveList}}" 
+    loading="{{liveLoading}}"
+    finished="{{liveFinished}}"
+    generic:item="live-item" 
+  />
   <empty-illus wx:if="{{liveFinished && !liveList.length}}" desc="没有找到相关直播" />
-  <view class="no-more-tips" wx:if="{{liveFinished && liveList.length}}">～没有更多啦～</view>
 </view>
 
-<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 4}}">
-  <fall-flow wx:if="{{scenicList}}" list="{{scenicList}}" generic:item="scenic-item-grid" />
+<view class="list-wrap" wx:if="{{searching && curMenuIdx === 4}}">
+  <fall-flow 
+    wx:if="{{scenicList}}" 
+    list="{{scenicList}}" 
+    loading="{{scenicLoading}}"
+    finished="{{scenicFinished}}"
+    generic:item="scenic-item-grid" 
+  />
   <empty-illus wx:if="{{scenicFinished && !scenicList.length}}" desc="没有找到相关景点" />
-  <view class="no-more-tips" wx:if="{{scenicFinished && scenicList.length}}">～没有更多啦～</view>
 </view>
 
-<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 5}}">
-  <fall-flow wx:if="{{hotelList}}" list="{{hotelList}}" generic:item="hotel-item-grid" />
+<view class="list-wrap" wx:if="{{searching && curMenuIdx === 5}}">
+  <fall-flow 
+    wx:if="{{hotelList}}" 
+    list="{{hotelList}}" 
+    loading="{{hotelLoading}}"
+    finished="{{hotelFinished}}"
+    generic:item="hotel-item-grid" 
+  />
   <empty-illus wx:if="{{hotelFinished && !hotelList.length}}" desc="没有找到相关酒店" />
-  <view class="no-more-tips" wx:if="{{hotelFinished && hotelList.length}}">～没有更多啦～</view>
 </view>
 
-<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 6}}">
-  <fall-flow wx:if="{{restaurantList}}" list="{{restaurantList}}" generic:item="restaurant-item-grid" />
+<view class="list-wrap" wx:if="{{searching && curMenuIdx === 6}}">
+  <fall-flow 
+    wx:if="{{restaurantList}}" 
+    list="{{restaurantList}}" 
+    loading="{{restaurantLoading}}"
+    finished="{{restaurantFinished}}"
+    generic:item="restaurant-item-grid" 
+  />
   <empty-illus wx:if="{{restaurantFinished && !restaurantList.length}}" desc="没有找到相关餐厅美食" />
-  <view class="no-more-tips" wx:if="{{restaurantFinished && restaurantList.length}}">～没有更多啦～</view>
 </view>
 
-<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 7}}">
-  <fall-flow wx:if="{{goodsList.length}}" list="{{goodsList}}" generic:item="goods-item-grid" />
+<view class="list-wrap" wx:if="{{searching && curMenuIdx === 7}}">
+  <fall-flow 
+    wx:if="{{goodsList.length}}" 
+    list="{{goodsList}}" 
+    loading="{{goodsLoading}}"
+    finished="{{goodsFinished}}"
+    generic:item="goods-item-grid" 
+  />
   <empty-illus wx:if="{{goodsFinished && !goodsList.length}}" desc="没有找到相关商品" />
-  <view class="no-more-tips" wx:if="{{goodsFinished && goodsList.length}}">～没有更多啦～</view>
 </view>
 
-<view class="list-wrap" wx:if="{{isSearching && curMenuIdx === 8}}">
-  <user-item wx:for="{{userList}}" wx:key="index" item="{{item}}" />
-  <empty-illus wx:if="{{userFinished && !userList.length}}" desc="没有找到相关用户" />
+<view class="list-wrap" wx:if="{{searching && curMenuIdx === 8}}">
+  <user-item 
+    wx:for="{{userList}}" 
+    wx:key="index" 
+    item="{{item}}" 
+  />
+  <view class="loading row center" wx:if="{{userList.length && userLoading}}">
+    <image class="loading-icon" src="https://static.tiddler.cn/mp/loading.gif" />
+    <text>加载中...</text>
+  </view>
   <view class="no-more-tips" wx:if="{{userFinished && userList.length}}">～没有更多啦～</view>
+  <empty-illus wx:if="{{userFinished && !userList.length}}" desc="没有找到相关用户" />
 </view>
 
 <van-calendar 
   default-date="{{[checkInDate, checkOutDate]}}"
-  show="{{calendarPopupVisibel}}" 
+  show="{{calendarPopupVisible}}" 
   formatter="{{ formatter }}" 
   bind:close="hideCalendarPopup" 
   bind:confirm="setCalendar" 
