--- a/pages/subpages/common/search/index.wxss
+++ b/pages/subpages/common/search/index.wxss
@@ -147,6 +147,16 @@
   padding: 216rpx 20rpx 20rpx;
 }
 
+.loading {
+  padding: 16rpx 0 24rpx;
+  color: #999;
+  font-size: 24rpx;
+}
+.loading-icon {
+  width: 48rpx;
+  height: 48rpx;
+}
+
 .no-more-tips {
   padding: 24rpx 0 36rpx;
   color: #999;
