--- a/pages/subpages/mall/goods/index.wxml
+++ b/pages/subpages/mall/goods/index.wxml
@@ -41,7 +41,12 @@
       {{ item.name }}
     </view>
   </view>
-  <fall-flow wx:if="{{goodsList}}" list="{{goodsList}}" generic:item="goods-item" />
+  <fall-flow 
+    wx:if="{{goodsList}}" 
+    list="{{goodsList}}"
+    loading="{{loading}}"
+    finished="{{finished}}"
+    generic:item="goods-item" 
+  />
   <empty-illus wx:if="{{finished && !goodsList.length}}" desc="暂无列表" />
-  <view class="no-more-tips" wx:if="{{finished && goodsList.length}}">～没有更多啦～</view>
 </view>
