--- a/pages/subpages/mall/goods/subpages/cart/index.wxml
+++ b/pages/subpages/mall/goods/subpages/cart/index.wxml
@@ -66,10 +66,11 @@
 
   <view class="recommend-goods-wrap" wx:if="{{recommendGoodsList.length}}">
     <split-line desc="猜您喜欢" />
-    <fall-flow list="{{recommendGoodsList}}" generic:item="goods-item" />
+    <fall-flow 
+      list="{{recommendGoodsList}}" 
+      generic:item="goods-item" 
+    />
   </view>
-
-  <view class="nomore-tip" wx:if="{{recommendGoodsList.length && finished}}">～没有更多啦～</view>
 </view>
 
 <view class="bottom-bar" wx:if="{{cartList.length}}">
