--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxml
@@ -195,11 +195,13 @@
   <!-- 商品推荐 -->
   <view class="recommend-goods-wrap" wx:if="{{recommendGoodsList.length}}">
     <split-line desc="推荐" />
-    <fall-flow list="{{recommendGoodsList}}" generic:item="goods-item" />
+    <fall-flow 
+      list="{{recommendGoodsList}}" 
+      loading="{{loading}}"
+      finished="{{finished}}"
+      generic:item="goods-item" 
+    />
   </view>
-
-  <!-- nomore -->
-  <view class="nomore-tip">～没有更多啦～</view>
 </view>
 
 <!-- 底部工具栏 -->
