--- a/pages/tab-bar-pages/mall/index.wxml
+++ b/pages/tab-bar-pages/mall/index.wxml
@@ -40,12 +40,12 @@
     </view>
   </view>
   <view class="product-list">
-    <fall-flow list="{{productList}}" generic:item="product-item" />
+    <fall-flow 
+      list="{{productList}}" 
+      loading="{{loading}}"
+      finished="{{finished}}"
+      generic:item="product-item" 
+    />
   </view>
-  <view class="loading row center" wx:if="{{productList.length && isLoading}}">
-    <image class="loading-icon" src="https://static.tiddler.cn/mp/loading.gif" />
-    <text>加载中...</text>
-  </view>
-  <view class="no-more-tips" wx:if="{{!isLoading && finished && productList.length}}">～没有更多啦～</view>
   <empty-illus wx:if="{{finished && !productList.length}}" desc="暂无列表" />
 </view>
