--- a/pages/subpages/mall/scenic/subpages/scenic-detail/components/ticket-item/index.wxss
+++ b/pages/subpages/mall/scenic/subpages/scenic-detail/components/ticket-item/index.wxss
@@ -7,10 +7,10 @@
   margin-right: 8rpx;
   padding: 0 8rpx;
   height: 32rpx;
-  color: #FFE5BD;
+  color: var(--gold-1);
   font-size: 22rpx;
   line-height: 1;
-  background: linear-gradient(270deg, #404A5C 0%, #0F131A 100%);
+  background: var(--blue-linear-2);
   border-radius: 6rpx;
 }
 .shop-name {
@@ -18,6 +18,7 @@
   font-size: 26rpx;
   font-weight: bold;
 }
+
 .tips-wrap {
   margin-top: 18rpx;
 }
@@ -35,6 +36,29 @@
 .tips.stress {
   color: #529AFE;
 }
+
+.price-wrap {
+  margin-top: 18rpx;
+}
+
+.commission-tag {
+  display: flex;
+  align-items: center;
+  margin-left: 24rpx;
+  padding-left: 20rpx;
+  padding-right: 16rpx;
+  height: 40rpx;
+  color: #fff;
+  font-size: 18rpx;
+  background: #FD2D55;
+  border-radius: 20rpx;
+}
+.commission-visible-icon {
+  margin-left: 8rpx;
+  width: 24rpx;
+  height: 24rpx;
+}
+
 .booking-wrap {
   display: flex;
   flex-direction: column;
@@ -48,4 +72,9 @@
   font-size: 24rpx;
   border-radius: 30rpx;
   background: var(--blue-1);
+}
+.sales {
+  margin-top: 6rpx;
+  color: #666;
+  font-size: 22rpx;
 }
