--- a/pages/subpages/mine/merchant/subpages/hotel-order/components/order-item/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/hotel-order/components/order-item/index.wxml
@@ -14,7 +14,7 @@
   <view class="order-footer">
     <view class="total-info row baseline">
       <view>{{ORDER.paymentDesc(item.status)}}：</view>
-      <price-unit price="{{item.paymentAmount}}" color="#333" fontSize="26rpx" integerFontSize="36rpx" />
+      <price-unit price="{{item.paymentAmount || 0}}" color="#333" fontSize="26rpx" integerFontSize="36rpx" />
     </view>
     <view class="deliver-info-wrap" wx:if="{{item.status === 201}}">
       <view class="deliver-info row" catchtap="copyOrderSn">
