--- a/pages/subpages/mine/merchant/subpages/meal-ticket-order/subpages/order-detail/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/meal-ticket-order/subpages/order-detail/index.wxml
@@ -7,7 +7,7 @@
     <meal-ticket-item ticketInfo="{{orderInfo.ticketInfo}}" />
     <view class="list row between">
       <view class="title">{{ORDER.paymentDesc(orderInfo.status)}}</view>
-      <price-unit price="{{orderInfo.paymentAmount}}" />
+      <price-unit price="{{orderInfo.paymentAmount || 0}}" />
     </view>
     <view class="more-info-wrap">
       <view class="list row top">
