--- a/pages/subpages/mine/order/components/hotel-order-item/index.wxml
+++ b/pages/subpages/mine/order/components/hotel-order-item/index.wxml
@@ -24,7 +24,7 @@
   <view class="list-footer">
     <view class="total-info row baseline">
       <view>{{ORDER.paymentDesc(item.status)}}：</view>
-      <price-unit price="{{item.paymentAmount}}" fontSize="26rpx" integerFontSize="36rpx" />
+      <price-unit price="{{item.paymentAmount || 0}}" fontSize="26rpx" integerFontSize="36rpx" />
     </view>
     <view class="btn-wrap">
       <button 
