--- a/pages/subpages/mine/relative-product/index.wxml
+++ b/pages/subpages/mine/relative-product/index.wxml
@@ -33,7 +33,7 @@
         <image class="product-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
         <view class="product-name omit single">{{item.name}}</view>
         <view class="product-price-wrap">
-          <price-unit price="{{item.price}}" unit="起" />
+          <price-unit price="{{item.price || 0}}" unit="起" />
           <image class="pick-icon" src="./images/{{item.selected ? 'checked' : 'unchecked'}}.png" />
         </view>
       </view>
@@ -48,7 +48,7 @@
         <image class="product-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
         <view class="product-name omit single">{{item.name}}</view>
         <view class="product-price-wrap">
-          <price-unit price="{{item.price}}" unit="起" />
+          <price-unit price="{{item.price || 0}}" unit="起" />
           <image class="pick-icon" src="./images/{{item.selected ? 'checked' : 'unchecked'}}.png" />
         </view>
       </view>
@@ -63,7 +63,7 @@
         <image class="product-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
         <view class="product-name omit single">{{item.name}}</view>
         <view class="product-price-wrap">
-          <price-unit price="{{item.price}}" unit="起" />
+          <price-unit price="{{item.price || 0}}" unit="起" />
           <image class="pick-icon" src="./images/{{item.selected ? 'checked' : 'unchecked'}}.png" />
         </view>
       </view>
@@ -78,7 +78,7 @@
         <image class="product-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
         <view class="product-name omit single">{{item.name}}</view>
         <view class="product-price-wrap">
-          <price-unit price="{{item.price}}" />
+          <price-unit price="{{item.price || 0}}" />
           <image class="pick-icon" src="./images/{{item.selected ? 'checked' : 'unchecked'}}.png" />
         </view>
       </view>
