--- a/pages/subpages/home/media/live/live-play/components/goods-popup/index.wxml
+++ b/pages/subpages/home/media/live/live-play/components/goods-popup/index.wxml
@@ -11,7 +11,7 @@
           <view class="goods-name omit">{{item.name}}</view>
           <view class="goods-stock">库存：{{item.stock}}件</view>
           <view class="row between">
-            <price-unit price="{{item.price}}" fontSize="12px" integerFontSize="16px" />
+            <price-unit price="{{item.price || 0}}" fontSize="12px" integerFontSize="16px" />
             <button class="buy-btn" hover-class="none">立即购买</button>
           </view>
         </view>
