--- a/pages/subpages/mall/goods/subpages/cart/index.wxml
+++ b/pages/subpages/mall/goods/subpages/cart/index.wxml
@@ -40,7 +40,7 @@
                   </view>
                   <view class="goods-price-wrap">
                     <view class="goods-price row baseline">
-                      <price-unit price="{{_item.price}}" />
+                      <price-unit price="{{_item.price || 0}}" />
                       <view class="price-market" wx:if="{{_item.marketPrice}}">¥{{_item.marketPrice}}</view>
                     </view>
                     <van-stepper value="{{ _item.number }}" async-change bind:change="countChange" data-cart-index="{{index}}" data-goods-index="{{_index}}" integer max="{{_item.stock}}" catchtap="catchtap" />
@@ -81,7 +81,7 @@
   <view class="bar-main" wx:if="{{!deleteBtnVisible}}">
     <view class="total-price row baseline">
       <text>合计：</text>
-      <price-unit price="{{totalPrice}}" fontSize="26rpx" integerFontSize="36rpx" />
+      <price-unit price="{{totalPrice || 0}}" fontSize="26rpx" integerFontSize="36rpx" />
     </view>
     <button class="submit {{selectedCount ? 'active' : ''}}" bindtap="submit" hover-class="none">
       <text>结算</text>
