--- a/pages/subpages/mine/merchant/subpages/set-meal-order/subpages/order-detail/index.wxml
+++ b/pages/subpages/mine/merchant/subpages/set-meal-order/subpages/order-detail/index.wxml
@@ -7,7 +7,7 @@
     <set-meal-item info="{{orderInfo.setMealInfo}}" bind:checkDetail="navToSetMealDetail" />
     <view class="list row between">
       <view class="title">{{ORDER.paymentDesc(orderInfo.status)}}</view>
-      <price-unit price="{{orderInfo.paymentAmount}}" />
+      <price-unit price="{{orderInfo.paymentAmount || 0}}" />
     </view>
     <view class="more-info-wrap">
       <view class="list row top">
