--- a/pages/subpages/mine/utils/hotelOrder.wxs
+++ b/pages/subpages/mine/utils/hotelOrder.wxs
@@ -1,18 +1,24 @@
 function statusDesc(status) {
   var desc = "";
   if (status === 101) {
-    desc = "等待买家付款";
+    desc = "待付款";
   } else if (status === 102 || status === 103 || status === 104) {
     desc = "交易关闭";
   } else if (status === 201) {
-    desc = "等待卖家确认";
+    desc = "待商家确认";
   } else if (status === 202) {
     desc = "退款申请中";
   } else if (status === 203) {
     desc = "退款成功";
   } else if (status === 301) {
     desc = "待入住";
-  } else if (status === 401 || status === 402 || status === 501) {
+  } else if (
+    status === 401 ||
+    status === 402 ||
+    status === 403 ||
+    status === 501 ||
+    status === 502
+  ) {
     desc = "交易成功";
   }
   return desc;
@@ -36,5 +42,5 @@ function paymentDesc(status) {
 
 module.exports = {
   statusDesc: statusDesc,
-  paymentDesc: paymentDesc,
+  paymentDesc: paymentDesc
 };
